--- a/daml.yaml
+++ b/daml.yaml
@@ -8,14 +8,14 @@ dependencies:
   - daml-script
 data-dependencies:
   # INTERFACE DEPENDENCIES
-  #- .lib/daml-finance-interface-account.dar
+  - .lib/daml-finance-interface-account.dar
   - .lib/daml-finance-interface-holding.dar
   #- .lib/daml-finance-interface-instrument-base.dar
   #- .lib/daml-finance-interface-lifecycle.dar
   # - .lib/daml-finance-interface-settlement.dar
   - .lib/daml-finance-interface-types-common.dar
   # IMPLEMENTATION DEPENDENCIES
-  #- .lib/daml-finance-account.dar
+  - .lib/daml-finance-account.dar
   #- .lib/daml-finance-data.dar
   - .lib/daml-finance-holding.dar
   #- .lib/daml-finance-instrument-token.dar
@@ -29,7 +29,7 @@ data-dependencies:
   # - .lib/daml-finance-interface-instrument-generic.dar
   # - .lib/daml-finance-interface-instrument-swap.dar
   # - .lib/daml-finance-interface-instrument-token.dar
-  # - .lib/daml-finance-interface-util.dar
+  - .lib/daml-finance-interface-util.dar
   # - .lib/daml-finance-interface-types-date.dar
   # UNUSED IMPLEMENTATIONS DEPENDENCIES - UNCOMMENT TO ENABLE
   # - .lib/daml-finance-claims.dar
